# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml
gendiff/: __init__.py  diff.py  parsing_engine.py
gendiff/formatter/: __init__.py  linear.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
hexlet_code-0.1.2.dist-info/: METADATA  RECORD
tests/: conftest.py  test_gendiff.py
tests/data/: gendiff_expected_file1_empty.txt  gendiff_expected_file2_empty.txt  gendiff_expected_json_file2_empty.txt  gendiff_rec_expected.txt  gendiff_rec_expected_json.txt
